--- a/src/css/base.css
+++ b/src/css/base.css
@@ -10,6 +10,10 @@ html {
     font-size: 10px;
 }
 
+body {
+    background-color: #333;
+}
+
 #canvas-font-renderer {
     position: absolute;
     left: 0;
